Bug: 756892 Reviewer: Jay Wootton Comment: In the what's new page, the description's position is now relative to prevent absolutely positioned content from overlapping other entries.

--- a/trunk/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtTeaming.css
+++ b/trunk/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtTeaming.css
@@ -250,6 +250,7 @@
 	font-size: 12px;
 	margin-top: 4px;
 	margin-left: 1px;
+	position: relative;
 }
 
 .activityStreamCommentAvatarImg
